--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "path": "^0.12.7",
     "uuid": "^9.0.1"
   }
